--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!doctype html>
 <html ⚡ lang="it">
 <head>
-  <meta charset="utf-8">
-  <title>Ultime Notizie | Bruno Rachiele</title>
-  <link rel="canonical" href="https://amp.brunorachiele.it/">
-  <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <meta name="description" content="Ultime notizie aggiornate automaticamente dal sito Bruno Rachiele.">
-  <meta name="robots" content="index, follow">
+<meta charset="utf-8">
+<title>Ultime Notizie | Bruno Rachiele</title>
+<link rel="canonical" href="https://amp.brunorachiele.it/">
+<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+<meta name="description" content="Ultime notizie aggiornate automaticamente dal sito Bruno Rachiele.">
+<meta name="robots" content="index, follow">
 
-  <!-- AMP base -->
-  <script async src="https://cdn.ampproject.org/v0.js"></script>
-  <script async custom-element="amp-list" src="https://cdn.ampproject.org/v0/amp-list-0.1.js"></script>
-  <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
+<!-- AMP base -->
+<script async src="https://cdn.ampproject.org/v0.js"></script>
+<script async custom-element="amp-list" src="https://cdn.ampproject.org/v0/amp-list-0.1.js"></script>
+<script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
 
-  <!-- Boilerplate AMP -->
-  <style amp-boilerplate>
+<!-- Boilerplate AMP -->
+<style amp-boilerplate>
 body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
       -moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
       -ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
@@ -31,38 +31,36 @@ body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:non
 </style>
 </noscript>
 
-  <!-- Stile personalizzato -->
-  <style amp-custom>
-    body { font-family: Arial,sans-serif; max-width:800px; margin:auto; padding:20px; color:#111; }
-    h1 { text-align:center; font-size:2em; margin-bottom:20px; }
-    .logo { display:block; margin:0 auto 20px; width:120px; height:120px; }
-    article { margin-bottom:30px; border-bottom:1px solid #ddd; padding-bottom:15px; }
-    h2 { font-size:1.4em; margin:0 0 8px; }
-    a { color:#1a73e8; text-decoration:none; }
-    p { line-height:1.6; margin:4px 0; }
-    amp-img { margin-bottom:10px; }
-    .read-more { display:inline-block; margin-top:8px; color:#1a73e8; font-weight:bold; }
-  </style>
+<!-- Stile personalizzato -->
+<style amp-custom>
+body { font-family: Arial,sans-serif; max-width:800px; margin:auto; padding:20px; color:#111; }
+.logo { display:block; margin:0 auto 20px; width:120px; height:120px; }
+h1 { text-align:center; margin-bottom:20px; }
+article { margin-bottom:30px; border-bottom:1px solid #ddd; padding-bottom:15px; }
+h2 { font-size:1.4em; margin:0 0 8px; }
+a { color:#1a73e8; text-decoration:none; }
+p { line-height:1.6; margin:4px 0; }
+amp-img { margin-bottom:10px; }
+.read-more { display:inline-block; margin-top:8px; font-weight:bold; color:#1a73e8; }
+</style>
 </head>
 <body>
-  <!-- Logo -->
-  <img class="logo" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiOeKLAFzNySkI5ahC_uZiv0Asne6shnjr1QndoMNmRBtkNdQfe59GGO3nY5nc5C4OCXNMXGXu1XtHm0X7gPqbvTgFjqszFGQrPD3G5R4c2MIJPiZCk5OX6dLbnYKeU1itEVo7OcJB9I0N-Wi9z9WP64l5_btoNMrZ111Ex8i-W9UcKwOJPv5uDnl6LwhA/s1600/2ed26cc2-38e4-4d67-a1c5-5e522b654c90%20%281%29.png" alt="Logo Bruno Rachiele">
+<img class="logo" src="logo.png" alt="Logo Bruno Rachiele">
+<h1>Ultime Notizie</h1>
 
-  <h1>Ultime Notizie</h1>
-
-  <!-- Lista articoli dinamica -->
-  <amp-list width="auto" height="1600" layout="fixed-height" src="feed.json" items="items">
-    <template type="amp-mustache">
-      <article>
-        {{#thumbnail}}
-        <amp-img src="{{thumbnail}}" width="600" height="400" layout="responsive" alt="{{title}}"></amp-img>
-        {{/thumbnail}}
-        <h2><a href="{{link}}" target="_blank">{{title}}</a></h2>
-        <p>{{pubDate}}</p>
-        <p>{{contentSnippet}}</p>
-        <a class="read-more" href="{{link}}" target="_blank">Leggi tutto</a>
-      </article>
-    </template>
-  </amp-list>
+<!-- Lista articoli dinamica -->
+<amp-list width="auto" height="1600" layout="fixed-height" src="feed.json" items="items">
+<template type="amp-mustache">
+<article>
+{{#thumbnail}}
+<amp-img src="{{thumbnail}}" width="600" height="400" layout="responsive" alt="{{title}}"></amp-img>
+{{/thumbnail}}
+<h2><a href="{{link}}">{{title}}</a></h2>
+<p>{{pubDate}}</p>
+<p>{{contentSnippet}}</p>
+<a class="read-more" href="{{link}}">Leggi tutto</a>
+</article>
+</template>
+</amp-list>
 </body>
 </html>
