--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ⚡ lang="it">
 <head>
 <meta charset="utf-8">
-<title>Ultime Notizie | Bruno Rachiele</title>
+<title>Ultime Notizie | brunorachiele.it</title>
 <link rel="canonical" href="https://amp.brunorachiele.it/">
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 <meta name="description" content="Ultime notizie aggiornate automaticamente dal sito Bruno Rachiele.">
@@ -42,7 +42,7 @@ amp-img { margin-bottom:10px; }
 </style>
 </head>
 <body>
-<img class="logo" src="logo.png" alt="Logo Bruno Rachiele">
+<img class="logo" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiOeKLAFzNySkI5ahC_uZiv0Asne6shnjr1QndoMNmRBtkNdQfe59GGO3nY5nc5C4OCXNMXGXu1XtHm0X7gPqbvTgFjqszFGQrPD3G5R4c2MIJPiZCk5OX6dLbnYKeU1itEVo7OcJB9I0N-Wi9z9WP64l5_btoNMrZ111Ex8i-W9UcKwOJPv5uDnl6LwhA/s1600/2ed26cc2-38e4-4d67-a1c5-5e522b654c90%20%281%29.png" alt="Logo Bruno Rachiele">
 <h1>Ultime Notizie</h1>
 <amp-list width="auto" height="1600" layout="fixed-height" src="feed.json" items="items">
 <template type="amp-mustache">
