--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
 <!doctype html>
 <html ⚡ lang="it">
 <head>
-<meta charset="utf-8">
-<title>Ultime Notizie | Bruno Rachiele</title>
-<link rel="canonical" href="https://amp.brunorachiele.it/">
-<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-<meta name="description" content="Ultime notizie aggiornate automaticamente dal sito Bruno Rachiele.">
-<meta name="robots" content="index, follow">
+  <meta charset="utf-8">
+  <title>Ultime Notizie | brunorachiele.it</title>
 
-<script async src="https://cdn.ampproject.org/v0.js"></script>
-<script async custom-element="amp-list" src="https://cdn.ampproject.org/v0/amp-list-0.1.js"></script>
-<script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
+  <link rel="canonical" href="https://amp.brunorachiele.it/">
+  <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+  <meta name="description" content="Ultime notizie da brunorachiele.it in formato AMP.">
+  <meta name="robots" content="index, follow">
 
-<style amp-boilerplate>
+  <!-- AMP core -->
+  <script async src="https://cdn.ampproject.org/v0.js"></script>
+  <script async custom-element="amp-list"
+    src="https://cdn.ampproject.org/v0/amp-list-0.1.js"></script>
+  <script async custom-template="amp-mustache"
+    src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
+  <script async custom-element="amp-ad"
+    src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
+
+  <!-- AMP BOILERPLATE UFFICIALE -->
+  <style amp-boilerplate>
 body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
-      -moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
-      -ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
-      animation:-amp-start 8s steps(1,end) 0s 1 normal both}
+-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
+-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
+animation:-amp-start 8s steps(1,end) 0s 1 normal both}
 @-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
 @-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
 @-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
@@ -29,30 +36,115 @@ body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:non
 </style>
 </noscript>
 
-<style amp-custom>
-body { font-family: Arial,sans-serif; max-width:800px; margin:auto; padding:20px; color:#111; }
-h1 { text-align:center; margin-bottom:20px; }
-article { margin-bottom:30px; border-bottom:1px solid #ddd; padding-bottom:15px; }
-h2 { font-size:1.4em; margin:0 0 8px; }
-amp-img { margin-bottom:10px; }
-p { margin:4px 0; }
-a { color:#1a73e8; text-decoration:none; }
-.read-more { display:inline-block; margin-top:8px; font-weight:bold; color:#1a73e8; }
-</style>
+  <!-- STILE PERSONALIZZATO -->
+  <style amp-custom>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 820px;
+      margin: auto;
+      padding: 16px;
+      color: #111;
+      background: #fff;
+    }
+    header {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .logo {
+      margin: 0 auto 10px;
+    }
+    h1 {
+      font-size: 1.8em;
+      margin: 10px 0 20px;
+    }
+    article {
+      margin-bottom: 30px;
+      padding-bottom: 20px;
+      border-bottom: 1px solid #e0e0e0;
+    }
+    h2 {
+      font-size: 1.3em;
+      margin: 8px 0;
+    }
+    .date {
+      font-size: 0.85em;
+      color: #666;
+    }
+    a {
+      color: #1a73e8;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .read-more {
+      display: inline-block;
+      margin-top: 8px;
+    }
+    amp-img {
+      margin-bottom: 10px;
+      border-radius: 6px;
+    }
+    .ad {
+      margin: 25px 0;
+    }
+  </style>
 </head>
+
 <body>
-<h1>Ultime Notizie</h1>
-<amp-list width="auto" height="1600" layout="fixed-height" src="feed.json" items="items">
-<template type="amp-mustache">
-<article>
-{{#thumbnail}}
-<amp-img src="{{thumbnail}}" width="600" height="400" layout="responsive" alt="{{title}}"></amp-img>
-{{/thumbnail}}
-<h2><a href="{{link}}">{{title}}</a></h2>
-<p>{{pubDate}}</p>
-<a class="read-more" href="{{link}}">Leggi l'articolo completo</a>
-</article>
-</template>
+
+<header>
+  <amp-img
+    class="logo"
+    src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiOeKLAFzNySkI5ahC_uZiv0Asne6shnjr1QndoMNmRBtkNdQfe59GGO3nY5nc5C4OCXNMXGXu1XtHm0X7gPqbvTgFjqszFGQrPD3G5R4c2MIJPiZCk5OX6dLbnYKeU1itEVo7OcJB9I0N-Wi9z9WP64l5_btoNMrZ111Ex8i-W9UcKwOJPv5uDnl6LwhA/s1600/2ed26cc2-38e4-4d67-a1c5-5e522b654c90.png"
+    width="120"
+    height="120"
+    layout="fixed"
+    alt="Bruno Rachiele">
+  </amp-img>
+
+  <h1>Ultime Notizie</h1>
+</header>
+
+<!-- ANNUNCIO AMP -->
+<div class="ad">
+  <amp-ad width="100vw" height="320"
+    type="adsense"
+    data-ad-client="ca-pub-9225028785900171"
+    data-ad-slot="2980836148"
+    data-auto-format="rspv"
+    data-full-width="">
+    <div overflow=""></div>
+  </amp-ad>
+</div>
+
+<!-- LISTA ARTICOLI -->
+<amp-list
+  width="auto"
+  height="1600"
+  layout="fixed-height"
+  src="feed.json"
+  items="items">
+
+  <template type="amp-mustache">
+    <article>
+      {{#thumbnail}}
+      <amp-img
+        src="{{thumbnail}}"
+        width="600"
+        height="400"
+        layout="responsive"
+        alt="{{title}}">
+      </amp-img>
+      {{/thumbnail}}
+
+      <h2>{{title}}</h2>
+      <p class="date">{{pubDate}}</p>
+
+      <a class="read-more" href="{{link}}">
+        Leggi l’articolo completo su brunorachiele.it →
+      </a>
+    </article>
+  </template>
 </amp-list>
+
 </body>
 </html>
