--- a/article.html
+++ b/article.html
@@ -6,7 +6,6 @@
 
   <link rel="canonical" href="{{link}}">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <meta name="description" content="{{description}}">
   <meta name="robots" content="index, follow">
 
   <!-- AMP core -->
@@ -14,7 +13,7 @@
   <script async custom-element="amp-ad"
     src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
 
-  <!-- AMP boilerplate UFFICIALE -->
+  <!-- AMP boilerplate ufficiale -->
   <style amp-boilerplate>
 body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
 -moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
@@ -32,7 +31,7 @@ body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:non
 </style>
 </noscript>
 
-  <!-- Stile -->
+  <!-- Stile personalizzato -->
   <style amp-custom>
     body {
       font-family: Arial, sans-serif;
@@ -46,30 +45,35 @@ body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:non
       text-align: center;
       margin-bottom: 20px;
     }
+    .logo {
+      width: 96px;
+      height: 96px;
+      margin: auto;
+    }
     h1 {
       font-size: 1.7em;
       margin: 15px 0;
+      line-height: 1.2;
+      text-align: center;
     }
     .date {
       font-size: 0.85em;
       color: #666;
       margin-bottom: 10px;
+      text-align: center;
     }
     amp-img {
       border-radius: 8px;
       margin: 15px 0;
-    }
-    .excerpt {
-      font-size: 1em;
-      line-height: 1.6;
-      margin: 15px 0;
+      width: 100%;
+      height: auto;
     }
     .cta {
       display: block;
       text-align: center;
       margin: 25px 0;
       padding: 14px;
-      background: #1a73e8;
+      background: #6598b7;
       color: #fff;
       font-size: 1.1em;
       border-radius: 6px;
@@ -90,8 +94,8 @@ body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:non
 <body>
 
 <header>
-  <amp-img
-    src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiOeKLAFzNySkI5ahC_uZiv0Asne6shnjr1QndoMNmRBtkNdQfe59GGO3nY5nc5C4OCXNMXGXu1XtHm0X7gPqbvTgFjqszFGQrPD3G5R4c2MIJPiZCk5OX6dLbnYKeU1itEVo7OcJB9I0N-Wi9z9WP64l5_btoNMrZ111Ex8i-W9UcKwOJPv5uDnl6LwhA/s1600/2ed26cc2-38e4-4d67-a1c5-5e522b654c90.png"
+  <amp-img class="logo"
+    src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiOeKLAFzNySkI5ahC_uZiv0Asne6shnjr1QndoMNmRBtkNdQfe59GGO3nY5nc5C4OCXNMXGXu1XtHm0X7gPqbvTgFjqszFGQrPD3G5R4c2MIJPiZk5OX6dLbnYKeU1itEVo7OcJB9I0N-Wi9z9WP64l5_btoNMrZ111Ex8i-W9UcKwOJPv5uDnl6LwhA/s1600/2ed26cc2-38e4-4d67-a1c5-5e522b654c90.png"
     width="96"
     height="96"
     layout="fixed"
@@ -102,19 +106,16 @@ body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:non
 <h1>{{title}}</h1>
 <p class="date">{{pubDate}}</p>
 
+<!-- Immagine fissa per tutti gli articoli -->
 <amp-img
-  src="{{image}}"
+  src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEib-mwyxO9DqQx2o08DZF34q2BfiC3YeW9NebmMSRWxZ92ApQBwbBhuwhQhU9UeKYDDa_IqpLTDDHm9Em931n5KSDEjbMlJM4nmXhDgpplo_m6gZTR-3S8KOmWPNfzSZ5c0dlxcm0REM0RkMMGsF-BVpzsSQO0gmdrv6pD6n6kaXOYid7LpzueECp1sQ10/s1600/POLITICA.png"
   width="1200"
   height="675"
   layout="responsive"
   alt="{{title}}">
 </amp-img>
 
-<div class="excerpt">
-  {{description}}
-</div>
-
-<!-- ANNUNCIO AMP -->
+<!-- Annuncio AMP -->
 <div class="ad">
   <amp-ad width="100vw" height="320"
     type="adsense"
