--- a/index.html
+++ b/index.html
@@ -139,9 +139,10 @@ body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:non
       <h2>{{title}}</h2>
       <p class="date">{{pubDate}}</p>
 
-      <a class="read-more" href="{{link}}">
-        Leggi l’articolo completo su brunorachiele.it →
-      </a>
+      <a class="read-more" href="{{link_amp}}">
+  Leggi l’articolo completo →
+</a>
+
     </article>
   </template>
 </amp-list>
