--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
   <meta name="description" content="Ultime notizie da brunorachiele.it in formato AMP.">
   <meta name="robots" content="index, follow">
 
+  <!-- AMP core -->
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-list"
-          src="https://cdn.ampproject.org/v0/amp-list-0.1.js"></script>
+    src="https://cdn.ampproject.org/v0/amp-list-0.1.js"></script>
   <script async custom-template="amp-mustache"
-          src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
+    src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
+  <script async custom-element="amp-ad"
+    src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
 
+  <!-- AMP BOILERPLATE -->
   <style amp-boilerplate>
 body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
 -moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
@@ -32,15 +36,32 @@ body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:non
 </style>
 </noscript>
 
+  <!-- STILE PERSONALIZZATO -->
   <style amp-custom>
-    body { font-family: Arial,sans-serif; max-width:820px; margin:auto; padding:16px; color:#111; background:#fff; }
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 820px;
+      margin: auto;
+      padding: 16px;
+      color: #111;
+      background: #fff;
+    }
     header { text-align:center; margin-bottom:20px; }
     .logo { margin:0 auto 10px; }
     h1 { font-size:1.8em; margin:10px 0 20px; }
     article { margin-bottom:30px; padding-bottom:20px; border-bottom:1px solid #e0e0e0; }
     h2 { font-size:1.3em; margin:8px 0; }
     .date { font-size:0.85em; color:#666; }
-    a.read-more { display:inline-block; margin-top:8px; padding:10px 14px; background:#6598b7; color:#fff; border-radius:5px; text-decoration:none; font-weight:bold; }
+    a.read-more { 
+      display:inline-block; 
+      margin-top:8px; 
+      padding:10px 14px; 
+      background:#6598b7; 
+      color:#fff; 
+      border-radius:5px; 
+      text-decoration:none; 
+      font-weight:bold;
+    }
     amp-img { margin-bottom:10px; border-radius:6px; }
     .ad { margin:25px 0; }
   </style>
@@ -49,35 +70,53 @@ body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:non
 <body>
 
 <header>
-  <amp-img class="logo"
-           src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiOeKLAFzNySkI5ahC_uZiv0Asne6shnjr1QndoMNmRBtkNdQfe59GGO3nY5nc5C4OCXNMXGXu1XtHm0X7gPqbvTgFjqszFGQrPD3G5R4c2MIJPiZk5OX6dLbnYKeU1itEVo7OcJB9I0N-Wi9z9WP64l5_btoNMrZ111Ex8i-W9UcKwOJPv5uDnl6LwhA/s1600/2ed26cc2-38e4-4d67-a1c5-5e522b654c90.png"
-           width="90" height="90" layout="fixed" alt="Bruno Rachiele">
+  <amp-img
+    class="logo"
+    src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiOeKLAFzNySkI5ahC_uZiv0Asne6shnjr1QndoMNmRBtkNdQfe59GGO3nY5nc5C4OCXNMXGXu1XtHm0X7gPqbvTgFjqszFGQrPD3G5R4c2MIJPiZk5OX6dLbnYKeU1itEVo7OcJB9I0N-Wi9z9WP64l5_btoNMrZ111Ex8i-W9UcKwOJPv5uDnl6LwhA/s1600/2ed26cc2-38e4-4d67-a1c5-5e522b654c90.png"
+    width="90"
+    height="90"
+    layout="fixed"
+    alt="Bruno Rachiele">
+  </amp-img>
+
   <h1>Ultime Notizie</h1>
 </header>
 
+<!-- PUBBLICITÀ IN TESTA -->
 <div class="ad">
   <amp-ad width="100vw" height="320"
-          type="adsense"
-          data-ad-client="ca-pub-9225028785900171"
-          data-ad-slot="2980836148"
-          data-auto-format="rspv"
-          data-full-width="">
+    type="adsense"
+    data-ad-client="ca-pub-9225028785900171"
+    data-ad-slot="2980836148"
+    data-auto-format="rspv"
+    data-full-width="">
     <div overflow=""></div>
   </amp-ad>
 </div>
 
-<amp-list width="auto" height="2000" layout="fixed-height" src="feed.json" items="items">
+<!-- LISTA ARTICOLI -->
+<amp-list
+  width="auto"
+  height="2000"
+  layout="fixed-height"
+  src="feed.json"
+  items="items">
+
   <template type="amp-mustache">
     <article>
-      <amp-img src="https://blogger.googleusercontent.com/img/b/R29vXsEib-mwyxO9DqQx2o08DZF34q2BfiC3YeW9NebmMSRWxZ92ApQBwbBhuwhQhU9UeKYDDa_IqpLTDDHm9Em931n5KSDEjbMlJM4nmXhDgpplo_m6gZTR-3S8KOmWPNfzSZ5c0dlxcm0REM0RkMMGsF-BVpzsSQO0gmdrv6pD6n6kaXOYid7LpzueECp1sQ10/s1600/POLITICA.png"
-               width="1200" height="675" layout="responsive" alt="{{title}}">
+      <!-- Immagine fissa per tutti gli articoli -->
+      <amp-img
+        src="https://blogger.googleusercontent.com/img/b/R29vXsEib-mwyxO9DqQx2o08DZF34q2BfiC3YeW9NebmMSRWxZ92ApQBwbBhuwhQhU9UeKYDDa_IqpLTDDHm9Em931n5KSDEjbMlJM4nmXhDgpplo_m6gZTR-3S8KOmWPNfzSZ5c0dlxcm0REM0RkMMGsF-BVpzsSQO0gmdrv6pD6n6kaXOYid7LpzueECp1sQ10/s1600/POLITICA.png"
+        width="1200"
+        height="675"
+        layout="responsive"
+        alt="{{title}}">
       </amp-img>
 
       <h2>{{title}}</h2>
       <p class="date">{{pubDate}}</p>
 
-      <!-- LINK ALLA PAGINA AMP REALE -->
-      <a class="read-more" href="{{amp_link}}">
+      <a class="read-more" href="{{link}}">
         Leggi l’articolo completo →
       </a>
     </article>
