--- a/index.html
+++ b/index.html
@@ -2,15 +2,21 @@
 <html ⚡ lang="it">
 <head>
   <meta charset="utf-8">
-  <title>Bruno Rachiele</title>
+  <title>Bruno Rachiele - Pagine AMP</title>
 
   <link rel="canonical" href="https://amp.brunorachiele.it/">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <meta name="description" content="Bruno Rachiele - Pagina AMP Home.">
+  <meta name="description" content="Home AMP con tutti i link alle pagine AMP di Bruno Rachiele.">
   <meta name="robots" content="index, follow">
 
   <!-- AMP core -->
   <script async src="https://cdn.ampproject.org/v0.js"></script>
+  <script async custom-element="amp-list"
+    src="https://cdn.ampproject.org/v0/amp-list-0.1.js"></script>
+  <script async custom-template="amp-mustache"
+    src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
+  <script async custom-element="amp-ad"
+    src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
 
   <!-- AMP boilerplate -->
   <style amp-boilerplate>
@@ -30,11 +36,11 @@ body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:non
 </style>
 </noscript>
 
-  <!-- Stile personalizzato -->
   <style amp-custom>
     body {
       font-family: Arial, sans-serif;
       text-align: center;
+      max-width: 820px;
       margin: auto;
       padding: 40px 16px;
       background: #fff;
@@ -47,14 +53,24 @@ body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:non
       font-size: 1.5em;
       margin-bottom: 30px;
     }
-    .btn {
-      display: inline-block;
-      padding: 14px 24px;
-      background-color: #6598b7;
-      color: #fff;
-      font-size: 1.2em;
+    .ad {
+      margin: 25px 0;
+    }
+    article {
+      margin-bottom: 20px;
+      padding: 15px;
+      border: 1px solid #e0e0e0;
+      border-radius: 8px;
+    }
+    a.article-link {
+      display: block;
       text-decoration: none;
+      color: #fff;
+      background-color: #6598b7;
+      padding: 12px 20px;
       border-radius: 6px;
+      font-weight: bold;
+      margin-top: 8px;
     }
   </style>
 </head>
@@ -71,10 +87,30 @@ body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:non
     alt="Bruno Rachiele">
   </amp-img>
 
-  <h1>Benvenuto su Bruno Rachiele</h1>
-
-  <a class="btn" href="https://www.brunorachiele.it/">Visita il sito completo →</a>
+  <h1>Pagine AMP</h1>
 </header>
+
+<!-- Pubblicità -->
+<div class="ad">
+  <amp-ad width="100vw" height="320"
+    type="adsense"
+    data-ad-client="ca-pub-9225028785900171"
+    data-ad-slot="2980836148"
+    data-auto-format="rspv"
+    data-full-width>
+    <div overflow=""></div>
+  </amp-ad>
+</div>
+
+<!-- Lista dinamica delle pagine AMP -->
+<amp-list width="auto" height="2000" layout="fixed-height" src="feed-amp.json" items="items">
+  <template type="amp-mustache">
+    <article>
+      <h2>{{title}}</h2>
+      <a class="article-link" href="{{link}}">Apri la pagina AMP →</a>
+    </article>
+  </template>
+</amp-list>
 
 </body>
 </html>
