--- a/article.html
+++ b/article.html
@@ -4,137 +4,116 @@
   <meta charset="utf-8">
   <title>{{title}} | Bruno Rachiele</title>
 
+  <!-- CANONICAL -->
   <link rel="canonical" href="{{link}}">
+
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <meta name="robots" content="index, follow">
 
-  <!-- AMP core -->
+  <!-- AMP CORE -->
   <script async src="https://cdn.ampproject.org/v0.js"></script>
-  <script async custom-element="amp-ad"
-    src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
   <script async custom-element="amp-analytics"
     src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+  <script async custom-element="amp-ad"
+    src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
 
-  <!-- AMP boilerplate ufficiale -->
+  <!-- AMP BOILERPLATE -->
   <style amp-boilerplate>
-body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
--moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
--ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
-animation:-amp-start 8s steps(1,end) 0s 1 normal both}
-@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
-@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
-@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
-@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
-@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
-</style>
-<noscript>
-<style amp-boilerplate>
-body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}
-</style>
-</noscript>
+    body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;
+    animation:-amp-start 8s steps(1,end) 0s 1 normal both}
+    @keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
+  </style>
+  <noscript>
+    <style amp-boilerplate>
+      body{animation:none}
+    </style>
+  </noscript>
 
-  <!-- Stile personalizzato -->
+  <!-- STILI -->
   <style amp-custom>
     body {
       font-family: Arial, sans-serif;
       max-width: 760px;
       margin: auto;
       padding: 16px;
-      color: #111;
       background: #fff;
+      color: #111;
     }
     header {
       text-align: center;
       margin-bottom: 20px;
     }
-    .logo {
-      width: 96px;
-      height: 96px;
-      margin: auto;
-    }
     h1 {
       font-size: 1.7em;
-      margin: 15px 0;
-      line-height: 1.2;
-      text-align: center;
+      line-height: 1.25;
+      margin: 16px 0 8px;
     }
     .date {
       font-size: 0.85em;
       color: #666;
-      margin-bottom: 10px;
-      text-align: center;
     }
     amp-img {
       border-radius: 8px;
-      margin: 15px 0;
-      width: 100%;
-      height: auto;
+      margin: 16px 0;
     }
     .cta {
       display: block;
-      text-align: center;
-      margin: 25px 0;
+      margin: 24px 0;
       padding: 14px;
       background: #6598b7;
       color: #fff;
+      text-align: center;
       font-size: 1.1em;
       border-radius: 6px;
       text-decoration: none;
     }
     .ad {
-      margin: 25px 0;
+      margin: 28px 0;
     }
     footer {
       text-align: center;
       font-size: 0.85em;
       color: #666;
-      margin-top: 30px;
+      margin-top: 32px;
     }
   </style>
+
+  <!-- 🔥 JSON-LD NEWSARTICLE (CHIAVE PER LE FOTO) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "NewsArticle",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "{{link}}"
+    },
+    "headline": "{{title}}",
+    "image": [
+      "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEib-mwyxO9DqQx2o08DZF34q2BfiC3YeW9NebmMSRWxZ92ApQBwbBhuwhQhU9UeKYDDa_IqpLTDDHm9Em931n5KSDEjbMlJM4nmXhDgpplo_m6gZTR-3S8KOmWPNfzSZ5c0dlxcm0REM0RkMMGsF-BVpzsSQO0gmdrv6pD6n6kaXOYid7LpzueECp1sQ10/s1600/POLITICA.png"
+    ],
+    "datePublished": "{{isoDate}}",
+    "dateModified": "{{isoDate}}",
+    "author": {
+      "@type": "Person",
+      "name": "Bruno Rachiele"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "Bruno Rachiele",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiOeKLAFzNySkI5ahC_uZiv0Asne6shnjr1QndoMNmRBtkNdQfe59GGO3nY5nc5C4OCXNMXGXu1XtHm0X7gPqbvTgFjqszFGQrPD3G5R4c2MIJPiZCk5OX6dLbnYKeU1itEVo7OcJB9I0N-Wi9z9WP64l5_btoNMrZ111Ex8i-W9UcKwOJPv5uDnl6LwhA/s1600/logo.png"
+      }
+    }
+  }
+  </script>
+
 </head>
 
 <body>
 
-<header>
-  <amp-img class="logo"
-    src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiOeKLAFzNySkI5ahC_uZiv0Asne6shnjr1QndoMNmRBtkNdQfe59GGO3nY5nc5C4OCXNMXGXu1XtHm0X7gPqbvTgFjqszFGQrPD3G5R4c2MIJPiZCk5OX6dLbnYKeU1itEVo7OcJB9I0N-Wi9z9WP64l5_btoNMrZ111Ex8i-W9UcKwOJPv5uDnl6LwhA/s1600/2ed26cc2-38e4-4d67-a1c5-5e522b654c90%20%281%29.png"
-    width="96"
-    height="96"
-    layout="fixed"
-    alt="Bruno Rachiele">
-  </amp-img>
-</header>
-
-<h1>{{title}}</h1>
-<p class="date">{{pubDate}}</p>
-
-<!-- Immagine fissa per tutti gli articoli -->
-<amp-img
-  src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEib-mwyxO9DqQx2o08DZF34q2BfiC3YeW9NebmMSRWxZ92ApQBwbBhuwhQhU9UeKYDDa_IqpLTDDHm9Em931n5KSDEjbMlJM4nmXhDgpplo_m6gZTR-3S8KOmWPNfzSZ5c0dlxcm0REM0RkMMGsF-BVpzsSQO0gmdrv6pD6n6kaXOYid7LpzueECp1sQ10/s1600/POLITICA.png"
-  width="1200"
-  height="675"
-  layout="responsive"
-  alt="{{title}}">
-</amp-img>
-  
-<a class="cta" href="{{link}}">
-  👉 Leggi l’articolo completo su brunorachiele.it
-</a>
-  
-<!-- Annuncio AMP -->
-<div class="ad">
-  <amp-ad width="100vw" height="320"
-    type="adsense"
-    data-ad-client="ca-pub-9225028785900171"
-    data-ad-slot="2980836148"
-    data-auto-format="rspv"
-    data-full-width="">
-    <div overflow=""></div>
-  </amp-ad>
-</div>
-
-<!-- Google Analytics AMP -->
-<amp-analytics type="gtag" data-credentials="include">
+<!-- GOOGLE ANALYTICS AMP -->
+<amp-analytics type="gtag">
   <script type="application/json">
   {
     "vars": {
@@ -146,6 +125,36 @@ body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:non
   }
   </script>
 </amp-analytics>
+
+<header>
+  <h1>{{title}}</h1>
+  <div class="date">{{pubDate}}</div>
+</header>
+
+<!-- IMMAGINE PRINCIPALE -->
+<amp-img
+  src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEib-mwyxO9DqQx2o08DZF34q2BfiC3YeW9NebmMSRWxZ92ApQBwbBhuwhQhU9UeKYDDa_IqpLTDDHm9Em931n5KSDEjbMlJM4nmXhDgpplo_m6gZTR-3S8KOmWPNfzSZ5c0dlxcm0REM0RkMMGsF-BVpzsSQO0gmdrv6pD6n6kaXOYid7LpzueECp1sQ10/s1600/POLITICA.png"
+  width="1200"
+  height="675"
+  layout="responsive"
+  alt="{{title}}">
+</amp-img>
+
+<a class="cta" href="{{link}}">
+👉 Leggi l’articolo completo su brunorachiele.it
+</a>
+
+<!-- PUBBLICITÀ -->
+<div class="ad">
+  <amp-ad width="100vw" height="320"
+    type="adsense"
+    data-ad-client="ca-pub-9225028785900171"
+    data-ad-slot="2980836148"
+    data-auto-format="rspv"
+    data-full-width="">
+    <div overflow=""></div>
+  </amp-ad>
+</div>
 
 <footer>
   © brunorachiele.it
