--- a/amp/prime-pagine/index.html
+++ b/amp/prime-pagine/index.html
@@ -68,7 +68,7 @@
       display: inline-block;
       padding: 14px 28px;
       margin: 20px 0;
-      background-color: #ff4500;
+      background-color: #6598b7;
       color: #fff;
       text-decoration: none;
       font-weight: bold;
