--- a/amp/prime-pagine/index.html
+++ b/amp/prime-pagine/index.html
@@ -106,7 +106,7 @@
   </div>
 
   <!-- BOTTONE -->
-  <a class="btn" href="https://brunorachiele.it/prime-pagine" target="_blank">
+  <a class="btn" href="https://www.brunorachiele.it/p/prime-pagine-dei-giornali.html" target="_blank">
     Visualizza le prime pagine di oggi su Brunorachiele.it
   </a>
   
