--- a/amp/prime-pagine/index.html
+++ b/amp/prime-pagine/index.html
@@ -76,7 +76,7 @@
       font-size: 1em;
     }
     .btn:hover {
-      background-color: #e03e00;
+      background-color: #6598b7;
     }
     small {
       display: block;
