--- a/amp/webstories/index.html
+++ b/amp/webstories/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Ultimi Sondaggi Politici - Bruno Rachiele</title>
-  <link rel="canonical" href="https://stories.brunorachiele.it/">
+  <link rel="canonical" href="https://amp.brunorachiele.it/amp/webstories">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 
   <!-- AMP runtime -->
@@ -100,8 +100,8 @@
 <amp-story
   standalone
   title="Web Stories Politica"
-  publisher="Bruno Rachiele"
-  publisher-logo-src="https://dummyimage.com/64x64/6598b7/6598b7.png"
+  publisher="brunorachiele.it"
+  publisher-logo-src="https://amp.brunorachiele.it/amp/webstories"
   poster-portrait-src="https://dummyimage.com/1080x1920/6598b7/ffffff.png">
 
   <!-- COVER -->
