--- a/amp/autore/bruno-rachiele.html
+++ b/amp/autore/bruno-rachiele.html
@@ -2,18 +2,15 @@
 <html ⚡ lang="it">
 <head>
   <meta charset="utf-8">
-  <title>Bruno Rachiele – Atticista Politico</title>
+  <title>Bruno Rachiele – Attivista politico e analista</title>
 
-  <!-- CANONICAL -->
   <link rel="canonical" href="https://amp.brunorachiele.it/autore/bruno-rachiele.html">
 
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <meta name="robots" content="index,follow">
 
-  <!-- AMP runtime -->
   <script async src="https://cdn.ampproject.org/v0.js"></script>
 
-  <!-- AMP boilerplate -->
   <style amp-boilerplate>
     body {
       -webkit-animation: -amp-start 8s steps(1,end) 0s 1 normal both;
@@ -31,7 +28,6 @@
     </style>
   </noscript>
 
-  <!-- STILI -->
   <style amp-custom>
     body {
       font-family: Arial, Helvetica, sans-serif;
@@ -83,7 +79,7 @@
     }
   </style>
 
-  <!-- SCHEMA.ORG PERSON + ESPERIENZE -->
+  <!-- SCHEMA.ORG PERSON (VALIDO) -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -91,8 +87,8 @@
     "name": "Bruno Rachiele",
     "url": "https://www.brunorachiele.it/",
     "image": "https://amp.brunorachiele.it/img/profilo.jpg",
-    "jobTitle": "Attivista Politico",
-    "description": "Attivista Politico. ex rappresentante alla Consulta degli Studenti, Creatore di brunorachiele.it",
+    "jobTitle": "Attivista politico",
+    "description": "Attivista politico e analista, già rappresentante alla Consulta Provinciale degli Studenti di Catanzaro e fondatore di brunorachiele.it.",
     "birthDate": "2004-10-19",
     "birthPlace": {
       "@type": "Place",
@@ -103,17 +99,6 @@
       "name": "brunorachiele.it",
       "url": "https://www.brunorachiele.it/"
     },
-    "hasOccupation": [
-      {
-        "@type": "Occupation",
-        "name": "Collaboratore editoriale",
-        "occupationLocation": "Italia",
-        "estimatedSalary": {
-          "@type": "Politischool",
-          "currency": "EUR"
-        }
-      }
-    ],
     "sameAs": [
       "https://www.wikidata.org/wiki/Q136450602"
     ]
@@ -134,17 +119,16 @@
   </amp-img>
 
   <h1>Bruno Rachiele</h1>
-  <p class="subtitle">Analista politico</p>
+  <p class="subtitle">Attivista politico e analista</p>
 </header>
 
 <main>
 
   <section>
     <p>
-      Bruno Rachiele è un analista politico italiano che si occupa di
-      sondaggi, trend elettorali e analisi dei dati politici.
-      I suoi contenuti vengono pubblicati su <strong>brunorachiele.it</strong>
-      con aggiornamenti costanti.
+      Bruno Rachiele è un attivista politico e analista italiano.
+      Si occupa di sondaggi, trend elettorali e analisi dei dati politici.
+      I suoi contenuti vengono pubblicati su <strong>brunorachiele.it</strong>.
     </p>
   </section>
 
@@ -152,14 +136,12 @@
     <h2>Collaborazioni editoriali</h2>
     <ul>
       <li>
-        <strong>PoliSchool</strong> – collaborazione editoriale e analitica
-        <br>
-        <em>fino a febbraio 2025</em>
+        <strong>PoliSchool</strong> – collaborazione editoriale  
+        <br><em>fino a febbraio 2025</em>
       </li>
       <li>
-        <strong>Ermes – Giornale universitario</strong> – collaborazione editoriale
-        <br>
-        <em>dal 1 ottobre 2024 a oggi</em>
+        <strong>Ermes – Giornale universitario</strong> – collaborazione editoriale  
+        <br><em>dal 1 ottobre 2024 a oggi</em>
       </li>
     </ul>
   </section>
@@ -177,11 +159,9 @@
     <h2>Incarichi precedenti</h2>
     <ul>
       <li>
-        <strong>Rappresentante alla Consulta Provinciale degli Studenti di Catanzaro</strong>
-        <br>
-        <em>dal 1 ottobre 2021 al luglio 2023</em>
-        <br>
-        <span>con Azione Studentesca</span>
+        <strong>Rappresentante alla Consulta Provinciale degli Studenti di Catanzaro</strong>  
+        <br><em>1 ottobre 2021 – luglio 2023</em>  
+        <br>con Azione Studentesca
       </li>
     </ul>
   </section>
@@ -189,9 +169,7 @@
   <section>
     <h2>Approfondimenti</h2>
     <ul>
-      <li>
-        <a href="/stories/index.html">Web Stories politiche</a>
-      </li>
+      <li><a href="/stories/index.html">Web Stories politiche</a></li>
       <li>
         <a href="https://www.brunorachiele.it/" target="_blank" rel="noopener noreferrer">
           Tutti gli articoli
