--- a/amp/autore/bruno-rachiele.html
+++ b/amp/autore/bruno-rachiele.html
@@ -115,7 +115,7 @@
 
 <header>
   <amp-img
-    src="/img/profilo.jpg"
+    src="/foto/profilo.jpg"
     width="160"
     height="160"
     layout="fixed"
