--- a/amp/autore/bruno-rachiele.html
+++ b/amp/autore/bruno-rachiele.html
@@ -2,7 +2,7 @@
 <html ⚡ lang="it">
 <head>
   <meta charset="utf-8">
-  <title>Bruno Rachiele – Attivista politico e analista</title>
+  <title>Bruno Rachiele – Attivista politico</title>
 
   <!-- CANONICAL -->
   <link rel="canonical" href="https://amp.brunorachiele.it/autore/bruno-rachiele.html">
@@ -129,12 +129,18 @@
 <main>
 
   <section>
+    <p>Bruno Rachiele è nato nell’ottobre del 2004 a Soveria Mannelli e cresciuto a San Pietro a Maida, nella provincia di Catanzaro, in Calabria. Dopo aver completato la scuola elementare e media nella sua città natale, ha proseguito gli studi presso l’Istituto Tecnico Economico "V. De Fazio" di Lamezia Terme, frequentandolo dal 2018 al 2023. Durante quegli anni, si è sempre impegnato attivamente nella vita scolastica. Uno dei momenti più significativi è stato l’elezione a rappresentante della propria scuola alla Consulta Provinciale degli Studenti di Catanzaro, incarico che ha ricoperto dal 2021 al 2023. In questo ruolo ha avuto l’opportunità di rappresentare gli interessi degli studenti e di partecipare a discussioni e decisioni riguardanti l’intero sistema scolastico. Questa esperienza lo ha avvicinato al mondo della politica, avviando un percorso di impegno civico e partecipazione alla vita della comunità.
+Spinto dalla passione per il diritto, Bruno si è iscritto alla Facoltà di Giurisprudenza presso l’Università "Magna Graecia" di Catanzaro. Fin da giovane, ha dedicato parte del proprio tempo ad attività di volontariato, convinto che aiutare gli altri sia un valore fondamentale.
+    </p>
+  </section>
+
+<section>
     <p>
-      Bruno Rachiele è un attivista politico e studente di Giurisprudenza presso l'Università Magna Graecia di Catanzaro.
       I suoi contenuti vengono pubblicati su <strong>brunorachiele.it</strong> e <strong>ermes-giornale.blogspot.com</strong>
     </p>
   </section>
 
+  
   <section>
     <h2>Collaborazioni editoriali</h2>
     <ul>
