--- a/index.html
+++ b/index.html
@@ -57,6 +57,23 @@ body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:non
       border-radius: 6px;
     }
   </style>
+
+<!-- Favicon principale -->
+<link rel="icon" type="image/png" href="/img/favicon.png">
+<link rel="shortcut icon" href="/img/favicon.png">
+
+<!-- Apple / dispositivi iOS -->
+<link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+
+<!-- Manifest (opzionale, utile per PWA o salvataggio su home screen) -->
+<link rel="manifest" href="/manifest.json">
+
+<!-- Meta tag opzionali per compatibilità browser -->
+<meta name="msapplication-TileColor" content="#6598b7">
+<meta name="msapplication-TileImage" content="/img/favicon.png">
+<meta name="theme-color" content="#6598b7">
+
+  
 </head>
 
 <body>
