--- a/amp/autori/bruno-rachiele.html
+++ b/amp/autori/bruno-rachiele.html
@@ -90,62 +90,49 @@ body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:non
   </style>
 
   <!-- SCHEMA.ORG PERSON -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Person",
-    "name": "Bruno Rachiele",
-    "url": "https://www.brunorachiele.it/",
-    "image": "https://amp.brunorachiele.it/foto/profilo.jpg",
-    "jobTitle": "Attivista politico",
-    "description": "Attivista politico, già rappresentante alla Consulta Provinciale degli Studenti di Catanzaro, fondatore di brunorachiele.it.",
-    "birthDate": "2004-10-19",
-    "birthPlace": {
-      "@type": "Place",
-      "name": "Soveria Mannelli, Calabria, Italia"
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Bruno Rachiele",
+  "url": "https://www.brunorachiele.it/",
+  "image": "https://amp.brunorachiele.it/foto/profilo.jpg",
+  "jobTitle": "Attivista politico",
+  "description": "Attivista politico, già rappresentante alla Consulta Provinciale degli Studenti di Catanzaro, fondatore di brunorachiele.it.",
+  "birthDate": "2004-10-19",
+  "birthPlace": {
+    "@type": "Place",
+    "name": "Soveria Mannelli, Calabria, Italia"
+  },
+  "affiliation": [
+    {
+      "@type": "Organization",
+      "name": "brunorachiele.it",
+      "url": "https://www.brunorachiele.it/"
     },
-    "affiliation": [
-      {
-        "@type": "Organization",
-        "name": "brunorachiele.it",
-        "url": "https://www.brunorachiele.it/"
-      },
-      {
-        "@type": "Organization",
-        "name": "Fratelli d'Italia"
-      }
-    ],
-    "sameAs": [
-      "https://www.wikidata.org/wiki/Q136450602",
-      "https://www.instagram.com/rachielebruno_ufficiale",
-      "https://twitter.com/RachieleBruno"
-    ]
-  }
-  
-  "memberOf": [
-  {
-    "@type": "Organization",
-    "name": "Consulta Provinciale degli Studenti",
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Catanzaro",
-      "addressRegion": "Calabria",
-      "addressCountry": "IT"
+    {
+      "@type": "Organization",
+      "name": "Fratelli d'Italia"
     }
-  }
-],
-"hasRole": [
-  {
+  ],
+  "memberOf": {
+    "@type": "Organization",
+    "name": "Consulta Provinciale degli Studenti di Catanzaro"
+  },
+  "hasRole": {
     "@type": "Role",
     "roleName": "Rappresentante degli studenti",
     "startDate": "2021-10-01",
     "endDate": "2023-07-31",
     "description": "Rappresentante alla Consulta Provinciale degli Studenti di Catanzaro con incarichi nel coordinamento provinciale e regionale, eletto dalla comunità scolastica."
-  }
-]
-
-  
-  </script>
+  },
+  "sameAs": [
+    "https://www.wikidata.org/wiki/Q136450602",
+    "https://www.instagram.com/rachielebruno_ufficiale",
+    "https://twitter.com/RachieleBruno"
+  ]
+}
+</script>
 
 </head>
 
