--- a/amp/autori/bruno-rachiele.html
+++ b/amp/autori/bruno-rachiele.html
@@ -121,21 +121,40 @@ body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:non
 
   </style>
 
-  <!-- SCHEMA.ORG PERSON -->
+<!-- SCHEMA.ORG PERSON -->
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Person",
+  "@id": "https://www.brunorachiele.it/#bruno-rachiele",
   "name": "Bruno Rachiele",
   "url": "https://www.brunorachiele.it/",
-  "image": "https://amp.brunorachiele.it/foto/profilo.jpg",
+
+  "image": [
+    "https://amp.brunorachiele.it/foto/profilo.jpg",
+    "https://www.brunorachiele.it/foto/intervistarai.png",
+    "https://www.brunorachiele.it/foto/intervistalac.png",
+    "https://www.brunorachiele.it/foto/intervistacovid.png",
+    "https://www.brunorachiele.it/foto/intervistartl.jpg",
+  "https://www.brunorachiele.it/foto/dibattito.jpg",
+    "https://www.brunorachiele.it/foto/intervistartl1025.png"
+  ],
+
+  "primaryImageOfPage": {
+    "@type": "ImageObject",
+    "@id": "https://amp.brunorachiele.it/foto/profilo.jpg",
+    "url": "https://amp.brunorachiele.it/foto/profilo.jpg"
+  },
+
   "jobTitle": "Attivista politico",
   "description": "Attivista politico, già rappresentante alla Consulta Provinciale degli Studenti di Catanzaro, fondatore di brunorachiele.it.",
   "birthDate": "2004-10-19",
+
   "birthPlace": {
     "@type": "Place",
     "name": "Soveria Mannelli, Calabria, Italia"
   },
+
   "affiliation": [
     {
       "@type": "Organization",
@@ -147,10 +166,12 @@ body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:non
       "name": "Fratelli d'Italia"
     }
   ],
+
   "memberOf": {
     "@type": "Organization",
     "name": "Consulta Provinciale degli Studenti di Catanzaro"
   },
+
   "hasRole": {
     "@type": "Role",
     "roleName": "Rappresentante degli studenti",
@@ -158,13 +179,16 @@ body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:non
     "endDate": "2023-07-31",
     "description": "Rappresentante alla Consulta Provinciale degli Studenti di Catanzaro con incarichi nel coordinamento provinciale e regionale, eletto dalla comunità scolastica."
   },
+
   "sameAs": [
     "https://www.wikidata.org/wiki/Q136450602",
     "https://www.instagram.com/rachielebruno_ufficiale",
-    "https://twitter.com/RachieleBruno"
+    "https://twitter.com/RachieleBruno",
+    "https://amp.brunorachiele.it/"
   ]
 }
 </script>
+
 
 </head>
 
@@ -280,6 +304,13 @@ body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:non
            alt="Bruno Rachiele intervistato da RTL 102.5"
            loading="lazy">
       <figcaption>Intervista RTL 102.5</figcaption>
+    </figure>
+
+     <figure>
+      <img src="/foto/dibattito.jpg"
+           alt="Dibattito sul bullismo"
+           loading="lazy">
+      <figcaption>Dibattito sul bullismo Ite De Fazio - Febbraio 2023 </figcaption>
     </figure>
 
   </div>
