--- a/article.html
+++ b/article.html
@@ -99,7 +99,7 @@
     },
     "publisher": {
       "@type": "Organization",
-      "name": "Bruno Rachiele",
+      "name": "brunorachiele.it",
       "logo": {
         "@type": "ImageObject",
         "url": "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiOeKLAFzNySkI5ahC_uZiv0Asne6shnjr1QndoMNmRBtkNdQfe59GGO3nY5nc5C4OCXNMXGXu1XtHm0X7gPqbvTgFjqszFGQrPD3G5R4c2MIJPiZCk5OX6dLbnYKeU1itEVo7OcJB9I0N-Wi9z9WP64l5_btoNMrZ111Ex8i-W9UcKwOJPv5uDnl6LwhA/s1600/logo.png"
